# localhost

./: Cargo.toml  Header_Guide.md  README.md  fallou.html  http-server-event-loop.mermaid  uploadLargeFile.sh
example/: index.html  script.js  style.css
example/.default/: index.html
example/.default/css/: common.css  directory.css
example/.default/error/: error_template.html
example/.default/js/: error-content.js
example/.default/js/directory/: data.js  initialize.js
example/static/error/: 404.html
example/static/home/: index.html
example/upload/: libs.min.css  result.txt  test.txt
example/uploader/: index.html
src/: lib.rs  main.rs
src/.default/: directory_listing.html
src/.default/css/: error-page.css
src/.default/error/: error_template.html
src/.default/js/: error-content.js
src/.default/js/directory/: api.js  events.js  main.js
src/.default/js/utils/: format.js
src/cgi/: handler.rs
src/config/: config.json  config.rs
src/http/: body.rs  header.rs  mod.rs  request.rs  response.rs  status.rs  tests.rs
src/server/: cgi.rs  connection.rs  errors.rs  handlers.rs  host.rs  logger.rs  mod.rs  route.rs  server.rs  session.rs  static_files.rs  stream.rs  test  uploader.rs
static/: index.html
static/.default/: directory_listing.html
static/.default/css/: style.css
static/.default/js/: error-config.js  error-effects.js
static/.default/js/directory/: data.js  icons.js  initialize.js  render.js  stats.js
static/cgi-bin/: main.py
static/error/: 404.html  jj.html
test/: index.html
tests/: connection_tests.rs
