[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

[[test]]
name = "connection_tests"
path = "tests/connection_tests.rs"

[[bin]]
name = "localhost-cli"
path = "./src/bin/cli.rs"

[[bin]]
name = "localhost-server"
path = "./src/bin/server.rs"

[dependencies]
httparse = "1.9.5"
httpdate = "1.0.3"
libc = "0.2.168"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4"
colored = "2.0"
uuid = { version = "1.12.0", features = ["v4"] }
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
dialoguer = "0.11.0"
indicatif = "0.17.11"
tabwriter = "1.4.1"
